--- a/local/pressure-washing-sykehouse.html
+++ b/local/pressure-washing-sykehouse.html
@@ -1,1 +1,430 @@
+<!DOCTYPE html>
+<html lang="en-GB">
+<head>
 
+
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta name="robots" content="index, follow">
+<title>Pressure Washing Sykehouse Doncaster (Instant online quote)</title>
+<link rel="icon" href="/favicon.png" type="image/png">
+<link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-sykehouse.html">
+<meta name="description" content="Professional pressure washing in Sykehouse Doncaster for driveways, patios, walls, decking, and fencing. Local, reliable, and affordable. Get your instant online quote today and restore your outdoor spaces fast.">
+<link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
+<style>
+h1 {
+font-size: 2em; /* adjusts size for readability */
+text-align: center;
+margin-bottom: 20px;
+} 
+/* HEADER STYLING */
+header{
+text-align:center;
+padding:25px 10px;
+background:#fff;
+border-bottom:4px solid #27ae60;
+}
+
+.logo{
+max-height:90px;
+width:auto;
+}
+
+/* CALL BUTTON */
+.call-btn{
+display:inline-block;
+margin-top:18px;
+padding:14px 28px;
+background:#000;
+color:#fff;
+font-size:19px;
+text-decoration:none;
+font-weight:bold;
+border-radius:6px;
+border:2px solid #000;
+}
+.call-btn:hover{
+background:#333;
+color:#fff;
+}
+
+/* FOOTER */
+.site-footer{
+background:#000;
+color:#fff;
+text-align:center;
+padding:25px 15px;
+margin-top:40px;
+font-size:14px;
+}
+
+.footer-services{
+background-color: black;
+padding: 20px;
+text-align: center;
+margin-top: 15px;
+}
+
+.footer-services a{
+color: white;
+margin: 0 10px;
+}
+ /* LIGHTBOX STYLING */
+.lightbox {
+display: none; /* Hidden by default */
+position: fixed; /* Stay in place */
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background: rgba(0, 0, 0, 0.8); /* Semi-transparent black overlay */
+justify-content: center; /* Center the image horizontally */
+align-items: center; /* Center the image vertically */
+z-index: 9999; /* On top of everything */
+cursor: pointer; /* Click to close */
+flex-direction: column; /* For image + close button vertically */
+}
+
+.lightbox img {
+max-width: 90%;
+max-height: 90%;
+box-shadow: 0 0 20px rgba(0,0,0,0.5);
+}
+
+.lightbox span {
+position: absolute;
+top: 20px;
+right: 30px;
+color: white;
+font-size: 40px;
+font-weight: bold;
+cursor: pointer;
+user-select: none;
+}
+.header-buttons {
+display: flex;
+flex-direction: column;
+align-items: center;
+gap: 10px;
+}
+.main-nav {
+background: #000;
+border-bottom: 3px solid #27ae60;
+font-family: sans-serif;
+}
+
+.main-nav ul {
+list-style: none;
+margin: 0;
+padding: 0;
+}
+
+.menu {
+display: flex;
+justify-content: center;
+}
+
+.menu > li {
+position: relative;
+}
+
+.menu a {
+display: block;
+padding: 14px 22px;
+color: #fff;
+text-decoration: none;
+font-weight: 600;
+}
+
+.menu a:hover {
+background: #333;
+}
+
+/* DROPDOWN */
+.submenu {
+display: none;
+position: absolute;
+top: 100%;
+left: 0;
+background: #000;
+min-width: 200px;
+z-index: 1000;
+}
+
+.has-submenu:hover .submenu {
+display: block;
+}
+
+.submenu a {
+padding: 12px 18px;
+color: #fff;
+}
+
+/* MOBILE */
+@media (max-width: 768px) {
+.menu {
+flex-direction: column;
+}
+
+.submenu {
+position: static;
+display: none; /* hidden by default */
+}
+
+.submenu-toggle::after {
+content: " ▼";
+}
+}
+
+/* MOBILE CLICK TOGGLE */
+@media (max-width: 768px) {
+.submenu-toggle {
+cursor: pointer;
+}
+}
+</style>
+ 
+<!-- ✅ HEADER -->
+<header>
+<img src="/images/home-repairs-4u-doncaster.webp"
+alt="Home Repairs 4U logo"
+class="logo"
+width="600" height="200"
+loading="eager">
+
+<div style="text-align:center; margin-top:10px;">
+<a href="https://steely1968.github.io/"
+style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
+</div>
+
+<br>
+
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+<a href="https://homerepairs4u.com/quote-calculator/pressure-washing.html" class="call-btn" aria-label="Get a Quote for Pressure Washing">📝 Get Instant Quote</a>
+</header>
+<nav class="main-nav" aria-label="Main navigation">
+<ul class="menu">
+<li class="has-submenu">
+<a href="#" class="submenu-toggle">Services</a>
+<ul class="submenu">
+<li><a href="/local/pressure-washing-doncaster.html">Pressure Washing</a></li>
+<li><a href="/guttering-services/doncaster.html">Guttering Services</a></li>
+<li><a href="/contact.html">Contact</a></li>
+</ul>
+</li>
+</ul>
+</nav>
+
+ <!-- ✅ MAIN CONTENT -->
+<main style="max-width:1200px; margin:30px auto; padding:0 15px;">
+
+<!-- Section 1 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h1>Driveway Pressure Washing in Sykehouse Doncaster</h1>
+<h2>Professional Local Pressure Washing for Cleaner, Safer Driveways</h2>
+<p>
+<strong>Driveway pressure washing in Sykehouse Doncaster</strong> transforms tired, stained surfaces into clean, welcoming entrances that instantly improve kerb appeal. Our professional pressure washing service removes moss, algae, oil marks, and ground-in dirt that builds up over time on block paving, concrete, and tarmac driveways. Using commercial-grade equipment and surface-appropriate techniques, we restore your driveway safely without causing damage or uneven marks. Local homeowners in Sykehouse trust our pressure washing team for reliable results, honest pricing, and friendly service. A clean driveway not only looks better but also becomes safer by reducing slippery growth. Whether you are preparing for visitors, selling your home, or simply want a fresher exterior, our Sykehouse Doncaster pressure washing service delivers visible results quickly and efficiently. Every project is handled with care, from initial assessment to final rinse, ensuring consistent quality and long-lasting cleanliness that enhances your property value while maintaining compliance with local Sykehouse Doncaster standards and delivering dependable pressure washing results homeowners confidently recommend throughout the local area consistently.
+</p>
+<p>
+Our <strong>driveway pressure washing process in Sykehouse</strong> begins with a careful inspection to choose the correct pressure and detergents. This protects your surface while lifting deep stains effectively. We treat weeds and organic growth, rinse thoroughly, and leave a uniform finish. Customers across Sykehouse Doncaster appreciate our punctual arrivals, clear communication, and tidy work ethic. With transparent pricing and an instant online quote, booking trusted pressure washing has never been easier for busy homeowners. Our local team focuses on reliability, safety, and results, ensuring every Sykehouse Doncaster driveway looks refreshed, protected, and professionally cleaned after each visit using proven pressure washing methods you can trust.
+</p>
+<p>
+Choose our <strong>Sykehouse Doncaster driveway pressure washing service</strong> for fast results, lasting cleanliness, and friendly local professionals. Request your instant online quote today and enjoy a safer, smarter, and more attractive driveway with expert pressure washing you can rely on from a trusted local Sykehouse team serving Doncaster homeowners with pride.
+</p>
+<p>
+<a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
+title="Driveway pressure washing in Sykehouse">
+professional driveway pressure washing services in Sykehouse Doncaster FAQS</a></p>
+<img src="/images/pressure-washing-driveway.webp"
+alt="Clean driveway after professional pressure washing in Sykehouse Doncaster"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 2 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Patio Pressure Washing in Sykehouse Doncaster</h2>
+<h3>Restore Your Patio with Expert Pressure Washing</h3>
+<p>
+<strong>Patio pressure washing in Sykehouse Doncaster</strong> is the perfect way to revive outdoor living spaces affected by grime, algae, and weather staining. Over time, patios become slippery and discoloured, reducing both safety and enjoyment. Our professional pressure washing service lifts stubborn dirt from paving slabs, stone, and concrete surfaces, restoring their original appearance. Homeowners in Sykehouse rely on our experience to deliver even, streak-free results without surface damage. Pressure washing your patio not only improves visual appeal but also creates a cleaner, safer environment for family gatherings and outdoor relaxation. With local knowledge and proven methods, our Sykehouse Doncaster pressure washing team provides dependable results tailored to your specific patio material and layout.
+</p>
+<p>
+We approach every <strong>patio pressure washing job in Sykehouse</strong> with attention to detail and care. Before starting, we assess surface condition, jointing, and drainage to ensure the correct pressure washing technique is applied. This prevents erosion while effectively removing algae, moss, lichen, and ingrained dirt. Our process enhances traction, making patios safer in wet conditions common across Sykehouse Doncaster. Customers choose us because we combine professional equipment with friendly, local service and clear pricing. Pressure washing your patio also helps extend its lifespan by preventing organic growth from breaking down the surface over time. From small seating areas to large garden patios, our Sykehouse Doncaster pressure washing service delivers reliable, long-lasting cleanliness. With an instant online quote and flexible booking, refreshing your patio has never been more convenient or stress-free for local homeowners.
+</p>
+<p>
+Transform your outdoor space with <strong>patio pressure washing in Sykehouse Doncaster</strong>. Book today for fast results, trusted local service, and a cleaner patio ready for everyday use and entertaining.
+</p>
+<p>
+<a href="https://homerepairs4u.com/how-to/pressure-wash-patios.html"
+title="Patio and paving  pressure cleaning in Sykehouse">
+professional patio pressure washing services Sykehouse Doncaster FAQS</a></p>
+<img src="/images/pressure-washing-patios.webp"
+alt="Freshly cleaned patio after pressure washing in Sykehouse Doncaster garden"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 3 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>House &amp; Garden Wall Pressure Washing in Sykehouse Doncaster</h2>
+<h3>Safe, Effective Pressure Washing for Exterior Walls</h3>
+<p>
+<strong>House and garden wall pressure washing in Sykehouse Doncaster</strong> removes years of built-up dirt, algae, and pollution staining from exterior surfaces. Walls often collect grime that dulls your property’s appearance and can cause long-term damage if left untreated. Our professional pressure washing service safely cleans brickwork, render, and stone without harming mortar or finishes. Homeowners in Sykehouse trust our careful approach and reliable results. Clean walls instantly brighten your home and garden while improving overall kerb appeal. Using the correct pressure washing methods for each surface, we ensure a thorough clean that enhances appearance and protects your investment. Our Sykehouse Doncaster pressure washing team delivers consistent, high-quality results for residential properties of all sizes.
+</p>
+<p>
+Every <strong>wall pressure washing project in Sykehouse</strong> begins with a full assessment to select the safest technique. We remove algae and staining efficiently, restoring a uniform, refreshed finish. Customers appreciate our tidy work, clear communication, and dependable scheduling across Sykehouse Doncaster.
+</p>
+<p>
+Choose our <strong>house and garden wall pressure washing service in Sykehouse Doncaster</strong> for safe cleaning, visible improvement, and trusted local expertise. Get an instant online quote and refresh your property exterior today.
+</p>
+<img src="/images/pressure-washing-walls.webp"
+alt="House and garden walls cleaned by pressure washing in Sykehouse Doncaster"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 4 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Decking &amp; Fence Pressure Washing in Sykehouse Doncaster</h2>
+<h3>Bring Timber Surfaces Back to Life</h3>
+<p>
+<strong>Decking and fence pressure washing in Sykehouse Doncaster</strong> restores tired timber surfaces affected by algae, dirt, and weathering. Wooden decking and fencing can become slippery, grey, and unattractive without regular maintenance. Our professional pressure washing service removes surface grime while preserving the integrity of the wood. We adjust pressure carefully to avoid splintering or damage, leaving a clean, natural finish. Homeowners across Sykehouse trust our pressure washing expertise to improve safety and appearance in gardens and outdoor areas. Clean decking and fencing enhance the overall look of your property and create a more enjoyable outdoor environment. Our Sykehouse Doncaster pressure washing team delivers reliable, consistent results using proven techniques designed for timber surfaces.
+</p>
+<p>
+We take a careful approach to <strong>decking and fence pressure washing in Sykehouse</strong>, starting with an inspection of wood condition. This ensures the correct pressure washing method is used for lasting results. Customers in Sykehouse Doncaster value our attention to detail, punctual service, and clear pricing. Regular pressure washing helps extend the life of timber while maintaining a clean, safe outdoor space for everyday use.
+</p>
+<p>
+Refresh your garden with <strong>decking and fence pressure washing in Sykehouse Doncaster</strong>. Book today for reliable local service, expert cleaning, and instantly improved outdoor spaces.
+</p>
+<img src="/images/pressure-wash-decking.webp"
+alt="Wooden decking and fence restored with pressure washing in Sykehouse Doncaster"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 5 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Professional Pressure Washing Services in Sykehouse Doncaster</h2>
+<h3>Trusted Local Results with an Instant Online Quote</h3>
+<p>
+When you need <strong>reliable pressure washing in Sykehouse Doncaster</strong>, our local service delivers results you can see and trust. We specialise in driveway, patio, wall, decking, and fence pressure washing, providing complete exterior cleaning for residential properties. Homeowners choose us for our friendly approach, professional equipment, and consistent quality. Every job is tailored to your surface type, ensuring safe and effective pressure washing without damage. Our local knowledge of Sykehouse allows us to tackle common issues like algae and weather staining efficiently. With transparent pricing, flexible scheduling, and an instant online quote, maintaining your property has never been easier. Pressure washing not only improves appearance but also protects surfaces and enhances safety. From first contact to final clean, we focus on customer satisfaction and long-lasting results. Choose our Sykehouse Doncaster pressure washing service for dependable workmanship, honest advice, and a cleaner home exterior you can be proud of.
+</p>
+<p>
+We offer quotes for all our exterior cleaning services, including pressure washing, patio cleaning, and gutter maintenance.
+To get a quote specifically for gutter cleaning or maintenance in Doncaster, visit our
+<a href="https://homerepairs4u.com/guttering-services/doncaster.html" title="Professional Gutter Cleaning Services in Doncaster">Gutter Cleaning Service page</a>.
+</p>
+<div class="lightbox" id="lightbox" role="dialog" aria-modal="true" aria-labelledby="lightboxImg">
+<button class="lightbox-close" onclick="closeLightbox()" aria-label="Close lightbox">×</button>
+<img id="lightboxImg" src="" alt="">
+</div>
+<img src="/images/pressure-washing-algae.webp"
+alt="Professional pressure washing service cleaning exterior surfaces in Sykehouse Doncaster"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- ✅ BOTTOM CALL BUTTON -->
+<div style="text-align:center; margin:40px 0;">
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+</div>
+
+</main>
+
+<!-- ✅ FOOTER -->
+<footer class="site-footer">
+© Home Repairs 4U | Askern DN6 | Call 07735 873694
+
+
+</footer>
+ 
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "LocalBusiness",
+"name": "Home Repairs 4U",
+"image": "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp",
+"url": "https://homerepairs4u.com/local/pressure-washing-sykehouse.html",
+"telephone": "+44-07735-873694",
+"priceRange": "££",
+"address": {
+"@type": "PostalAddress",
+"streetAddress": "35 Airstone Road",
+"addressLocality": "Askern",
+"addressRegion": "Doncaster",
+"postalCode": "DN6 0QA",
+"addressCountry": "GB"
+},
+"geo": {
+"@type": "GeoCoordinates",
+"latitude": 53.6448,
+"longitude": -1.0492
+},
+"areaServed": "Sykehouse",
+"openingHoursSpecification": [
+{
+"@type": "OpeningHoursSpecification",
+"dayOfWeek": [
+"Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"
+],
+"opens": "00:00",
+"closes": "23:59"
+}
+],
+"sameAs": [
+"https://www.facebook.com/profile.php?id=61584395621256"
+]
+}
+</script>
+
+<!-- ✅ LIGHTBOX SCRIPT -->
+<script>
+function openLightbox(src, alt){
+const lightbox = document.getElementById("lightbox");
+const lightboxImg = document.getElementById("lightboxImg");
+
+lightbox.style.display = "flex"; // show lightbox
+lightboxImg.src = src; // set the image
+lightboxImg.alt = alt; // ✅ set alt dynamically
+}
+
+function closeLightbox(){
+document.getElementById("lightbox").style.display = "none";
+}
+
+// Optional: close lightbox with Esc key
+document.addEventListener('keydown', function(event) {
+const lightbox = document.getElementById('lightbox');
+if (event.key === "Escape" && lightbox.style.display === "flex") {
+lightbox.style.display = "none";
+}
+});
+</script>
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+const toggles = document.querySelectorAll('.submenu-toggle');
+toggles.forEach(function(toggle) {
+toggle.addEventListener('click', function(e) {
+e.preventDefault();
+const submenu = this.nextElementSibling;
+if(submenu.style.display === 'block') {
+submenu.style.display = 'none';
+} else {
+submenu.style.display = 'block';
+}
+});
+});
+});
+</script>
+</body>
+</html>
